# gearmulator

./: .gitmodules  CMakeLists.txt  base.cmake  build_mac.sh
.github/workflows/: cmake.yml  nightly.yml  release.yml
doc/: changelog.txt  dsp_threading_and_peripherals.md  mcp_server.md
source/: CMakeLists.txt  juce.cmake
source/jucePluginEditorLib/: pluginEditor.cpp  pluginEditor.h  settingsMidi.cpp
source/jucePluginEditorLib/patchmanager/: patchmanager.cpp  patchmanager.h
source/jucePluginEditorLib/patchmanagerUiRml/: listitem.cpp  listmodel.cpp  listmodel.h
source/jucePluginLib/: CMakeLists.txt  midiLearnTranslator.cpp  midiLearnTranslator.h  processor.cpp  processor.h  version.h.in
source/jucePluginLib/patchdb/: db.cpp
source/juceRmlUi/: CMakeLists.txt
source/osTIrusJucePlugin/: CMakeLists.txt  OsTIrusProcessor.cpp  OsTIrusProcessor.h  VirusTIRemoteControls.h  clapPresetDiscovery.cpp  tus_settings_dspaudio_OsTIrus.rml  tus_settings_gui_OsTIrus.rml
source/osirusJucePlugin/: CMakeLists.txt  OsirusProcessor.cpp  OsirusProcessor.h  VirusRemoteControls.h
source/patchDbTest/: CMakeLists.txt  patchDbTest.cpp
source/synthLib/: midiClock.cpp  midiClock.h
source/virusJucePlugin/: ParameterNames.h  SettingsDspAudioOsTIrus.cpp  SettingsDspAudioOsTIrus.h  SettingsGuiOsTIrus.cpp  VirusController.h  VirusEditor.cpp  VirusProcessor.cpp  VirusProcessor.h
source/virusLib/: device.cpp  device.h  dspSingle.h  hdi08TxParser.h  microcontroller.cpp  microcontroller.h  romfile.cpp  romfile.h
